styler.css
#numba1 {
	color: #bcbbbb;
	text-transform: uppercase;
	border-bottom: 2px solid #bcbbbb;
	margin: 0 40px 20px 40px;
	display: block;
	padding: 0 0 10px 0;
}

.header ul
{
	list-style-type: none;
	text-align: right;
	list-style-position: inside;
}

.header .col-sm-9 {
	display: inline;
}

.container {
	margin:  40px  40px;
}
#numba1 .col-sm-3
{
	float: left;
	max-width: 150px;
	max-height: 150px;
}

#numba2
{
	right: auto;
	left: auto;
	min-height: 400px;
	min-width: 600px;
	margin: 10px 0 0 0 ;
}

.featured-work {
	background-color: #ffffff;
	border-top: 1px solid #dbdbdb;
	display: block;
	color: #bcbbbb;
	font-size: 24px;
}

.featured-work h3 {
	color: #747704;
	text-transform: uppercase;
}

